# AgenticNewsLetter

./: .gitignore  Dockerfile  LICENSE  README.md  buildspec.yml  exeDocker.cmd  pyproject.toml  requirements.txt
.github/: main-schedule.yaml
aws/: refresh_credentials.cmd
aws/cdk/: app.py  cdk.json  exeCdkTest.cmd
aws/cdk/stacks/: NewsletterStack.py
aws/cdk/stacks/constructs/: CodeBuild.py  ECR.py  EventBridge.py  Lambda.py  SNS.py  SQS.py  SecretsManager.py  __init__.py
newsletter/: cons.py  graph.py  main.py  state.py
newsletter/nodes/: publisher.py  writer.py
newsletter/tests/: test_full_graph_structure.py  test_nodes.py
newsletter/utils/: __init__.py  bedrock_client.py  get_secrets.py  random_inputs.py  style_guides.py  topics.py
src/: main.py
src/nodes/: __init__.py  researcher.py  writer.py
