[project]
name = "agenticnewsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.83",
    "langchain-aws>=1.4.3",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "markdown>=3.10.2",
    "pytest>=9.0.2",
]
